Fix issue in Edge/IE where index overflows

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -136,7 +136,6 @@
 
  .super-intro {
     height: 100vh;
-    width: 100%;
     position: relative;
  }
 
@@ -144,7 +143,6 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
     text-align: center;
     transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
